fix(style): link color and wrap style (#283)

--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -129,6 +129,7 @@
 
     a {
       @include overflow-wrap(break-word);
+      @include line-break(anywhere);
 
       [theme=dark] & b, [theme=dark] & strong {
         color: $single-link-color-dark;
